--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.24.0",
     "canvacord": "^5.2.3",
     "dotenv": "^10.0.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.5.1",
     "factful.js": "^1.2.8",
