--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/morgan": "^1.9.3",
     "ainasepics": "^2.1.7",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "canvacord": "^5.2.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "express": "^4.17.1",
@@ -27,9 +29,11 @@
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.6",
     "nodemon": "^2.0.15",
+    "randomstring": "^1.2.2",
     "reddit.images": "^1.0.5",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "weather-js": "^2.0.0"
   },
   "devDependencies": {
     "@types/express-rate-limit": "^5.1.3"
