--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "rootDir": "./src",
       "target": "es6",
       "skipLibCheck": true,
+      "resolveJsonModule": true,
       "strict": true
   }
 }
