--- a/package.json
+++ b/package.json
@@ -15,25 +15,25 @@
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
-    "ainasepics": "^2.1.7",
+    "ainasepics": "^3.0.2",
     "anime-wallpaper": "^1.0.2",
-    "axios": "^0.24.0",
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "canvacord": "^5.2.3",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "express": "^4.17.1",
-    "express-rate-limit": "^5.5.1",
+    "dotenv": "^16.0.0",
+    "eslint-import-resolver-typescript": "^2.7.0",
+    "express": "^4.17.3",
+    "express-rate-limit": "^6.3.0",
     "factful.js": "^1.2.8",
-    "mongoose": "^6.1.1",
+    "mongoose": "^6.2.8",
     "morgan": "^1.10.0",
-    "node-fetch": "^2.6.6",
+    "node-fetch": "2.6.7",
     "nodemon": "^2.0.15",
     "randomstring": "^1.2.2",
-    "reddit.images": "^1.0.5",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
+    "reddit.images": "^1.0.7",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3",
     "weather-js": "^2.0.0"
   },
   "devDependencies": {
