--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "license": "ISC",
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "axios": "^0.26.1",
     "express": "^4.17.3",
+    "express-rate-limit": "^6.3.0",
+    "mongoose": "^6.2.10",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.2.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
