--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "express-rate-limit": "^6.3.0",
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.2.3",
+    "node-fetch": "2.6.7",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
