--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
+    "anime-wallpaper": "^1.0.2",
     "axios": "^0.26.1",
+    "captcha-canvas": "^3.1.0",
     "express": "^4.17.3",
     "express-rate-limit": "^6.3.0",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0",
     "node-fetch": "2.6.7",
     "nodemon": "^2.0.15",
+    "random-puppy": "^1.1.0",
+    "reddit.images": "^1.0.7",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
